kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medimindplus
  labels:
    name: medimindplus
    environment: production
